# objectDetection

./: CCL.cpp  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  gray2binary.cpp
CMakeScripts/: ReRunCMake.make
Debug/: CCL
assignment-two.build/Debug/CCL.build/Objects-normal/x86_64/: CCL.LinkFileList  CCL.d
assignment-two.build/Debug/ZERO_CHECK.build/: Script-6341FFD0EEA792B292D9738A.sh
assignment-two.xcodeproj/: project.pbxproj
assignment-two.xcodeproj/project.xcworkspace/xcuserdata/brock.xcuserdatad/: UserInterfaceState.xcuserstate
assignment-two.xcodeproj/xcshareddata/xcschemes/: CCL.xcscheme
assignment-two.xcodeproj/xcuserdata/brock.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
assignment-two.xcodeproj/xcuserdata/brock.xcuserdatad/xcschemes/: xcschememanagement.plist
test_pictures/: lines.tiff
